# ClientServerApp

./: .gitignore  CMakeLists.txt  clean.cmake  test.db
Client/: CMakeLists.txt  main.cpp
Client/TCP/inc/: TcpClient.h  header.h
Client/TCP/src/: TcpClient.cpp  sourse.cpp
Client2/: CMakeLists.txt  main.cpp
Client2/TCP/inc/: header.h
Client2/TCP/src/: sourse.cpp
Lib/: CMakeLists.txt
Lib/sha256/inc/: sha256.h
Lib/sha256/src/: sha256.c
SQLite/: CMakeLists.txt  main.c  main.cpp
SQLite/Lib/inc/: header.h  sqlite3.h
SQLite/Lib/src/: sourse.cpp
SQLite/Windows/inc/: header.h
SQLite/Windows/src/: sourse.cpp
Server/: CMakeLists.txt  example.db  main.cpp
Server/TCP/inc/: TcpServer.h  header.h
Server/TCP/src/: TcpServer.cpp  TcpServerClient.cpp  sourse.cpp
TCP/: CMakeLists.txt
TCP/inc/: general.h  header.h
TCP/src/: sourse.cpp
